--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dk-webtimer",
+  "name": "creep",
   "version": "0.0.1",
   "dependencies": {
     "express": "3.1.x"
@@ -7,5 +7,11 @@
   "engines": {
     "node": "0.10.x",
     "npm": "1.2.x"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-express-server": "~0.4.2",
+    "grunt-contrib-watch": "~0.5.1"
   }
 }
